--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                 Haloooo
                 <span id="name">Almaaaaa</span>
             </h1>
-            <p class="two" id="greetingText">Aku suka nama kamu btw hhe :v</p>
         </div>
 
         <div class="three">
@@ -49,16 +48,16 @@
         </div>
 
         <div class="five">
-            <p class="idea-1">Maaf yakk b aja si ini, tapi aku tulus dan menggunakan 10000% perasaan aku pas buatnya</p>
-            <p class="idea-2">Tapi even ini b aja, maa akuu mau tanyaa</p>
+            <p class="idea-1">meskipun ini biasa aja, tapi aku buat ini buat kamu doang. meskipun aya lieuran</p>
+            <p class="idea-2">Terimakasih atas semuanya aku sangat menikmati perjalanan kita dari pertama kita bertemu hahahahah</p>
             <p class="idea-3">
-                apa coba sesuatu yang ga b aja di dunia ini dan ituu adalah sesuatu yang sangaat<br>
+               Kamu adalah orang yang menurutku sangat<br>
                 <strong>special</strong>
                 .
             </p>
             <p class="idea-4">yaak betul, ituu adalahhh</p>
             <p class="idea-5">
-                Kamuuuuu  
+                Love You Alma❤️
                 <span>:)</span>
             </p>
             <p class="idea-6">
