--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-  <title>HBD ALMAAAA</title>
+  <title>HBD ALMA</title>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Haloooo
-                <span id="name">Almaaaaa</span>
+                <span id="name">Alma!</span>
             </h1>
         </div>
 
@@ -71,7 +71,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">Semoga hal baik terus menghapiri, dan  "LOVE YOU ALMA❤️"</h5>
+                <h5 id="wishText">Semoga hal baik terus menghapiri</h5>
             </div>
         </div>
 
