--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <strong>special</strong>
                 .
             </p>
-            <p class="idea-4">yaak betul, ituu adalahhh</p>
+            <p class="idea-4">maka dari itu..</p>
             <p class="idea-5">
                 Love You Alma❤️
                 <span>:)</span>
